WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189147
svg/W3C-SVG-1.1/render-groups-03-t.svg and some other SVG tests leak documents
https://bugs.webkit.org/show_bug.cgi?id=189147
Summary
svg/W3C-SVG-1.1/render-groups-03-t.svg and some other SVG tests leak documents
Simon Fraser (smfr)
Reported
2018-08-29 22:33:32 PDT
Seems like there's one Node left which references the doc: SVGDocument 0x28a401268 3 (refCount 0, referencingNodeCount 1) file:///Volumes/Data/Development/apple/webkit/OpenSource/LayoutTests/svg/W3C-SVG-1.1/render-groups-03-t.svg
Attachments
Patch showing how to use RefToken tracking on SVGFontFaceElements
(3.47 KB, patch)
2018-09-08 20:29 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(7.15 KB, patch)
2018-09-08 21:07 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-09-08 20:20:06 PDT
There's an SVGFontFaceElement that doesn't go away.
Simon Fraser (smfr)
Comment 2
2018-09-08 20:29:19 PDT
Created
attachment 349276
[details]
Patch showing how to use RefToken tracking on SVGFontFaceElements
Simon Fraser (smfr)
Comment 3
2018-09-08 20:54:29 PDT
There's a retain cycle: 3 0x107903384 WTF::RefPtr<WebCore::SVGFontFaceElement, WTF::DumbPtrTraits<WebCore::SVGFontFaceElement> >::RefPtr(WebCore::SVGFontFaceElement*) 4 0x1078db8ed WTF::RefPtr<WebCore::SVGFontFaceElement, WTF::DumbPtrTraits<WebCore::SVGFontFaceElement> >::RefPtr(WebCore::SVGFontFaceElement*) 5 0x1078db696 WebCore::CSSFontFaceSource::CSSFontFaceSource(WebCore::CSSFontFace&, WTF::String const&, WebCore::CachedFont*, WebCore::SVGFontFaceElement*, WTF::RefPtr<JSC::ArrayBufferView, WTF::DumbPtrTraits<JSC::ArrayBufferView> >&&) 6 0x1078dbb9d WebCore::CSSFontFaceSource::CSSFontFaceSource(WebCore::CSSFontFace&, WTF::String const&, WebCore::CachedFont*, WebCore::SVGFontFaceElement*, WTF::RefPtr<JSC::ArrayBufferView, WTF::DumbPtrTraits<JSC::ArrayBufferView> >&&) 7 0x1078cc4f6 WebCore::CSSFontFace::appendSources(WebCore::CSSFontFace&, WebCore::CSSValueList&, WebCore::Document*, bool) 8 0x1078de81d WebCore::CSSFontSelector::addFontFaceRule(WebCore::StyleRuleFontFace&, bool) 9 0x1078ddd9d WebCore::CSSFontSelector::buildCompleted() Document -> CSSFontSelector -> CSSFontFaceSource -> SVGFontFaceElement -> Document.
Radar WebKit Bug Importer
Comment 4
2018-09-08 20:54:55 PDT
<
rdar://problem/44269623
>
Simon Fraser (smfr)
Comment 5
2018-09-08 21:07:50 PDT
Created
attachment 349282
[details]
Patch
WebKit Commit Bot
Comment 6
2018-09-10 14:19:59 PDT
Comment on
attachment 349282
[details]
Patch Clearing flags on attachment: 349282 Committed
r235862
: <
https://trac.webkit.org/changeset/235862
>
WebKit Commit Bot
Comment 7
2018-09-10 14:20:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug