Source/WebCore/svg/SVGFontFaceElement.cpp
@@ -33,6 +33,7 @@
 #include "Document.h"
 #include "ElementIterator.h"
 #include "FontCascade.h"
+#include "Logging.h"
 #include "SVGDocumentExtensions.h"
 #include "SVGFontElement.h"
 #include "SVGFontFaceSrcElement.h"
@@ -56,7 +57,13 @@ inline SVGFontFaceElement::SVGFontFaceElement(const QualifiedName& tagName, Docu
     , m_fontFaceRule(StyleRuleFontFace::create(MutableStyleProperties::create(HTMLStandardMode)))
     , m_fontElement(nullptr)
 {
+    LOG(Fonts, "SVGFontFaceElement %p ctor", this);
     ASSERT(hasTagName(font_faceTag));
+}
+
+SVGFontFaceElement::~SVGFontFaceElement()
+{
+    LOG(Fonts, "SVGFontFaceElement %p dtor", this);
 }
 
 Ref<SVGFontFaceElement> SVGFontFaceElement::create(const QualifiedName& tagName, Document& document)
